# sharky

./: Cargo.toml  DOCUMENTATION.txt  LICENSE  README.md
assets/: Thumbs.db
src/: main.rs
