[package]
name = "sharky"
version = "0.1.2"
edition = "2024" 

[build-dependencies]
winres = "0.1"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tar = "0.4"
walkdir = "2"
zstd = "0.13.3" # Keep zstd for multi-threading
xz2 = "0.1.7" # Keep xz2 as requested (single-threaded XZ)
flate2 = "1.0" # <--- REMOVED if not used
bzip2 = "0.5.2"
zip = "3.0.0"


[profile.release]
# Optimisations pour un meilleur usage CPU
opt-level = "z"
lto = true
codegen-units = 1